data/derived/comb/progs/unify/prog2890.ml.out
Characters 62-83:
  |h::t -> append(listReverse(t), [h]);;
                 ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
